--- a/app/boards/shields/corne/corne.conf
+++ b/app/boards/shields/corne/corne.conf
@@ -1,3 +1,4 @@
+# note: control settings in corne_left.conf and and corne_right.conf individually instead!
 # Uncomment the following lines to enable the Corne RGB Underglow
 # CONFIG_ZMK_RGB_UNDERGLOW=y
 # CONFIG_WS2812_STRIP=y
